# django-vouch-proxy-auth

./: .gitignore  HISTORY.md  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: pypi.yml  unit_tests.yml
django_vouch_proxy_auth/: backends.py  middleware.py
tests/: settings.py  tests.py
