[metadata]
name = django-vouch-proxy-auth
version = attr: django_vouch_proxy_auth.__version__
author = Brendan Dalpe
author_email = bdalpe@gmail.com
description = Django Middleware to enable SSO using Vouch Proxy
license = MIT
keywords =
    sso
    django
    vouch
url = https://github.com/bdalpe/django-vouch-proxy-auth
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = find:
install_requires =
    PyJWT >= 2.0.0
    requests >= 2.0.0

[options.packages.find]
exclude =
    tests
    tests.*